2013-12-15  Eli Zaretskii  <eliz@gnu.org>

	* frame.h (FRAME_MOUSE_UPDATE): Fix a typo that caused infloop at
	startup.

2013-12-15  Paul Eggert  <eggert@cs.ucla.edu>

	* gnutls.c (Fgnutls_boot): Fix typo; "!" applied to a Lisp_Object.
	Don't worry about verify_error being t, since it has to be a list.

2013-12-14  Paul Eggert  <eggert@cs.ucla.edu>

	Use bool for boolean, focusing on headers.
	* atimer.h, lisp.h, syssignal.h, syswait.h, unexelf.c:
	No need to include <stdbool.h>, since conf_post.h does it now.
	* buffer.h (BUF_COMPUTE_UNCHANGED, DECODE_POSITION)
	(BUFFER_CHECK_INDIRECTION, GET_OVERLAYS_AT, PER_BUFFER_VALUE_P)
	(SET_PER_BUFFER_VALUE_P):
	* ccl.c, ccl.h (setup_ccl_program):
	* ccl.h (CHECK_CCL_PROGRAM):
	* character.h (MAKE_CHAR_UNIBYTE, CHECK_CHARACTER_CAR)
	(CHECK_CHARACTER_CDR, CHAR_STRING_ADVANCE, NEXT_CHAR_BOUNDARY)
	(PREV_CHAR_BOUNDARY, FETCH_STRING_CHAR_ADVANCE)
	(FETCH_STRING_CHAR_AS_MULTIBYTE_ADVANCE)
	(FETCH_STRING_CHAR_ADVANCE_NO_CHECK, FETCH_CHAR_ADVANCE)
	(FETCH_CHAR_ADVANCE_NO_CHECK, INC_POS, DEC_POS, INC_BOTH)
	(DEC_BOTH, BUF_INC_POS, BUF_DEC_POS):
	* charset.h (CHECK_CHARSET, CHECK_CHARSET_GET_ID)
	(CHECK_CHARSET_GET_ATTR, CHECK_CHARSET_GET_CHARSET)
	(CHARSET_FAST_MAP_SET):
	* coding.c (decode_coding_ccl, encode_coding_ccl):
	* coding.h (CHECK_CODING_SYSTEM, CHECK_CODING_SYSTEM_GET_SPEC)
	(CHECK_CODING_SYSTEM_GET_ID, SJIS_TO_JIS, SJIS_TO_JIS2)
	(JIS_TO_SJIS, JIS_TO_SJIS2, ENCODE_FILE, DECODE_FILE)
	(ENCODE_SYSTEM, DECODE_SYSTEM, ENCODE_UTF_8)
	(decode_coding_c_string):
	* composite.h (COMPOSITION_DECODE_REFS, COMPOSITION_DECODE_RULE):
	* conf_post.h (has_attribute):
	* dispextern.h (trace_redisplay_p):
	(INC_TEXT_POS, DEC_TEXT_POS, SET_GLYPH_FROM_GLYPH_CODE)
	(SET_CHAR_GLYPH, SET_CHAR_GLYPH_FROM_GLYPH)
	(SET_GLYPH_FROM_CHAR_GLYPH):
	(WINDOW_WANTS_MODELINE_P, WINDOW_WANTS_HEADER_LINE_P)
	(FACE_SUITABLE_FOR_ASCII_CHAR_P, FACE_SUITABLE_FOR_CHAR_P)
	(PRODUCE_GLYPHS, reset_mouse_highlight, in_display_vector_p)
	(cursor_in_mouse_face_p):